# Examples

./: LLM_NEO.ipynb  MCP_CLEAN_server_and_moon_distance.ipynb  QLoRA.ipynb  SUPERWISE SDK Quickstart - Advanced AI Agents with Pinecone Vector DB Tools.ipynb  SUPERWISE SDK Quickstart - Advanced AI Agents with Structured DB Tools.ipynb  SUPERWISE SDK Quickstart - Build and Test a Dataset Policy.ipynb  SUPERWISE SDK Quickstart - Create Guardrails.ipynb  SUPERWISE SDK Quickstart - Deploy a Basic LLM Assistant.ipynb  SUPERWISE SDK Quickstart - Deploy an AI Assistant with Connected Knowledge.ipynb  SUPERWISE SDK Quickstart - Deploy an External Flowise Agent.ipynb  SUPERWISE SDK Quickstart - Using OpenAI Compatible Models and Guardrails.ipynb  SUPERWISE SDK Tutorial - Integrating App Interactions with the Slack UI.ipynb  SUPERWISE SDK Tutorial - Intermiate Language Generation.ipynb  SUPERWISE SDK Tutorial - Synthetic Document Generation.ipynb
Superwise Guardrail employed for an action on a Palantir Ontology/: Example_Palantir_Ontology_and_Superwise_Guardrail.ipynb  readme.md
Superwise Interaction with an MCP Server/: readme.md
Superwise_Robot_Interaction/: Example_Superwise_and_Robot.ipynb  readme.md
dsl-spa_for_complex_dataframe_interactions/: dsl_spa_complex_natural_language_interaction_with__pandas_dataframe.ipynb  readme.md  (+1 more)
sw-sentinel/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  sentinel_config.json.example  setup.cfg  sw_sentinel.py  test_sentinel.sh
sw-sentinel/examples/paperclip/: README.md  lab-setup.md
