[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sw-sentinel"
version = "1.0.0"
description = "Superwise guardrail proxy for the Anthropic API — intercepts LLM calls and runs PII, jailbreak, and toxicity checks."
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "superwise-api>=4.0.0",
]

[project.scripts]
sw-sentinel = "sw_sentinel:main"

[tool.setuptools]
py-modules = ["sw_sentinel"]
