[metadata]
name = sw-sentinel
version = 1.0.0
description = Superwise guardrail proxy for the Anthropic API — intercepts LLM calls and runs PII, jailbreak, and toxicity checks.
long_description = file: README.md
long_description_content_type = text/markdown
license = Proprietary
python_requires = >=3.10

[options]
py_modules = sw_sentinel
install_requires =
    requests>=2.28.0
    superwise-api>=4.0.0

[options.entry_points]
console_scripts =
    sw-sentinel = sw_sentinel:main
